# Viperstem

./: .gitignore  Cargo.toml  build.rs  build.sh  limine.cfg  x86_64.json
.cargo/: config.toml  kernel.ld
src/: lib.rs  main.rs
src/allocator/: fixed_size_block.rs  linked_list.rs  mod.rs
src/cpu/: mod.rs  rsdp.rs
src/descriptors/: gdt.asm  gdt.rs  mod.rs
src/execution/: mod.rs
src/interrupts/: mod.rs  pic.rs
src/memory/: mod.rs  sect_alloc.rs
src/output/: deprterminal.rs  mod.rs  terminal.rs  writer.rs
src/paging/: mod.rs
src/panic/: mod.rs
src/task/: mod.rs
src/utils/: mod.rs
src/utils/stacks/: mod.rs
