[package]
name = "viperstem"
version = "0.1.0"
edition = "2021"
builder = "./build.rs"

[dependencies]
limine = "0.1.9"
raw-cpuid = "10.2.0"
rsdp = "2.0.0"
acpi = "4.1.1"
spin = "0.5.2"
x86_64 = "0.14.2"
pic8259 = "0.10.2"
pc-keyboard = "0.5.0"
aligned = "0.4.1"

[dependencies.lazy_static]
version = "1.4"
features = ["spin_no_std"]