[package]
name = "viperstem"
version = "0.1.0"
edition = "2021"
builder = "./build.rs"

[dependencies]
limine = "0.1.9"
raw-cpuid = "10.2.0"
rsdp = "2.0.0"
acpi = "4.1.1"
spin = { version = "0.9.0", features = ["lazy"] }
x86_64 = "0.14.2"
pic8259 = "0.10.2"
pc-keyboard = "0.5.0"
aligned = "0.4.1"
spinning_top = "0.2.1"
conquer-once = { version = "0.2.1", default-features = false }
linked_list_allocator = "0.10.4"
x2apic = "0.4.1"
bitfield = "0.14.0"


[dependencies.font8x8]
version = "0.3.1"
default-features = false
features = ["unicode"]

[dependencies.lazy_static]
version = "1.4"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.2.1"
default-features = false
features = ["alloc"]

[features]
default = ["term"]
term = []
serial = []